--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 Qmmc = { path = "../Qmmc" }
+
 colored = "2.1.0"
 lazy_static = "1.4.0"
 inkwell = { version = "0.4.0", features = ["llvm10-0"] }
+clap = { version = "4.5.4" }
