--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ colored = "2.1.0"
 lazy_static = "1.4.0"
 inkwell = { version = "0.4.0", features = ["llvm10-0"] }
 clap = { version = "4.5.4" }
+toml = "0.8.12"
