--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-Qmmc = { path = "../Qmmc" }
+Qmmc = { git = "https://github.com/miaomiaowu0428/Qmmc.git", branch = "static-analysis"}
 
 colored = "2.1.0"
 lazy_static = "1.4.0"
